// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots AnimatedBorder 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

<div
  class="c0"
>
  blah
</div>
`;

exports[`Snapshots AnimatedBorder with label 1`] = `
.c1 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="testing"
  >
    Label
  </label>
  blah
</div>
`;

exports[`Snapshots AnimatedBorder with label and dirty 1`] = `
.c1 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 0;
  left: 0.5em;
  padding: 0 4px;
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateY(-50%) scale(0.7);
  -ms-transform: translateY(-50%) scale(0.7);
  transform: translateY(-50%) scale(0.7);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Label
  </label>
  blah
</div>
`;

exports[`Snapshots AnimatedBorder with label and error 1`] = `
.c1 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: #D8534F;
  top: 0;
  left: 0.5em;
  padding: 0 4px;
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateY(-50%) scale(0.7);
  -ms-transform: translateY(-50%) scale(0.7);
  transform: translateY(-50%) scale(0.7);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
  border: 1px solid #D8534F;
  background-color: rgba(216,83,79,0.1);
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Label
  </label>
  blah
</div>
`;

exports[`Snapshots AnimatedBorder with label and focused 1`] = `
.c1 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: #F16622;
  top: 0;
  left: 0.5em;
  padding: 0 4px;
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateY(-50%) scale(0.7);
  -ms-transform: translateY(-50%) scale(0.7);
  transform: translateY(-50%) scale(0.7);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
  border: 1px solid #F16622;
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    Label
  </label>
  blah
</div>
`;
